--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "dbnote",
-    "slug": "dbnote",
+    "name": "TodoList",
+    "slug": "TodoList",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
